syntax = "proto3";

package sensor;

// Tells protoc where to put Go files
option go_package= "./proto;sensor";

// Message send from Client to Server
message SensorData {
    string id = 1;
    float temperature = 2;
    int64 timestamp = 3;
}

// Server Response
message ServerResponse {
    string status = 1;
}

// Sensor Request
message SensorRequest {
    string sensor_id = 1;
}

// gRPC Service
service SensorService {
    rpc SendSensorData(SensorData) returns (ServerResponse);

    // server streaming-> Case here---> Build a live feed system, where I (client) ask you (server) to stream sensor updates for a given sensor ID.
    rpc GetSensorDataStream(SensorRequest) returns (stream SensorData);

    // Client Streaming --> Eg: Batch Upload
    rpc UploadSensorBatch(stream SensorData) returns (ServerResponse);
}


